<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.ValidacionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbaruser"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:id="@+id/contenedor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/toolbaruser"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/textView10"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="@string/user"
            android:textColor="@color/total" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/contenedor1"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/validacion"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView12"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/codigo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contenedor2"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <com.chaos.view.PinView
            android:id="@+id/pincode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:cursorVisible="true"
            android:inputType="numberSigned"
            android:textColor="@color/colorPrimaryDark"
            app:cursorColor="@color/colorPrimaryDark"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="4dp"
            app:itemSpacing="5dp"
            app:itemWidth="48dp"
            app:lineColor="@android:color/transparent"
            app:lineWidth="2dp"
            android:itemBackground="@drawable/pin"
            app:viewType="none" />

        <Button
            android:id="@+id/button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_light"
            android:text="@string/solicitar"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>