<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/DrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="right">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBanco1">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="fireworks.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbaruser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBanco2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:gravity="left"
                    android:textColor="@color/colorPrimaryText"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="11dp" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbaruser">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            app:cardCornerRadius="5dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="3"
                                    android:orientation="horizontal">

                                    <com.airbnb.lottie.LottieAnimationView
                                        android:id="@+id/giftbox"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:lottie_autoPlay="true"
                                        app:lottie_fileName="giftbox.json"
                                        app:lottie_imageAssetsFolder="assets"
                                        app:lottie_loop="true" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView15"
                                        style="@style/textView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/correo" />
                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView">

                            <com.bdp.app.Clases.ImagenCircular.CircleImageView
                                android:id="@+id/circleImageView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/ic_user" />

                            <TextView
                                android:id="@+id/textView16"
                                style="@style/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_bold"
                                android:text="@string/felicidades"
                                android:textColor="@color/colorPrimaryText" />

                            <TextView
                                android:id="@+id/textView17"
                                style="@style/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:text="@string/placer"
                                android:textColor="@color/colorPrimaryText" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginStart="48dp"
                            android:layout_marginLeft="48dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="48dp"
                            android:layout_marginRight="48dp"
                            android:background="@drawable/inversion"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                            <TextView
                                android:id="@+id/textView14"
                                style="@style/title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/inversion"
                                android:fontFamily="@font/lato"
                                android:gravity="center_horizontal"
                                android:padding="10dp"
                                android:text="@string/inversionresul" />

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/lato_bold"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/inversionresul2"
                                android:textColor="@color/colorPrimaryDark" />
                        </LinearLayout>


                        <Button
                            android:id="@+id/button2"
                            style="@style/button"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:background="@android:color/transparent"
                            android:text="@string/comprobante"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button2"
                            app:srcCompat="@drawable/pacifico" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>






        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/colorMenu"
            android:scrollbars="vertical"

            tools:ignore="RtlHardcoded" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>



<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMenu"
    android:fitsSystemWindows="true"
    app:layout_collapseMode="parallax">


    <include
        layout="@layout/item_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorMenu"
        android:scrollbars="vertical"
        tools:ignore="RtlHardcoded" />


</androidx.drawerlayout.widget.DrawerLayout>-->
